<resources>
    <string name="app_name">Practice4</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="add_country">Add a Country</string>
    <string name="country_code">3 Letter Country Code</string>
    <string name="country_name">Country Name</string>
    <string name="country_continent">Continent</string>
    <string name="save">Save</string>
</resources>